--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contract Guard SA</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+</head>
+<body class="bg-gray-100 font-sans text-gray-900">
 
+    <div class="max-w-4xl mx-auto py-12 px-4">
+        <div class="text-center mb-10">
+            <h1 class="text-4xl font-bold text-slate-800">Contract Guard SA</h1>
+            <p class="text-lg text-slate-600 mt-2">The Freelancer's Legal Audit Tool</p>
+        </div>
+
+        <div class="grid md:grid-cols-2 gap-8">
+            <div class="bg-white shadow-md rounded-lg p-8 border border-slate-200 h-fit">
+                <div class="mb-6">
+                    <label class="block text-sm font-bold text-slate-700 mb-1">1. Access Code</label>
+                    <input type="text" id="accessCode" class="w-full p-3 border rounded focus:ring-2 focus:ring-green-500 outline-none" placeholder="Enter your subscription code">
+                </div>
+
+                <div class="mb-6">
+                    <label class="block text-sm font-bold text-slate-700 mb-1">2. Gemini API Key</label>
+                    <input type="password" id="apiKey" class="w-full p-3 border rounded focus:ring-2 focus:ring-slate-400 outline-none" placeholder="Paste your API key">
+                </div>
+
+                <div class="mb-6">
+                    <label class="block text-sm font-bold text-slate-700 mb-1">3. Contract (PDF)</label>
+                    <input type="file" id="fileInput" accept="application/pdf" class="w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded file:border-0 file:text-sm file:font-semibold file:bg-slate-800 file:text-white hover:file:bg-slate-700 cursor-pointer">
+                </div>
+
+                <button onclick="analyzeContract()" id="btn" class="w-full bg-slate-800 text-white font-bold py-3 rounded hover:bg-slate-900 transition">Run Risk Analysis</button>
+            </div>
+
+            <div class="bg-slate-800 text-white rounded-lg p-8 shadow-lg">
+                <h3 class="text-xl font-bold mb-2">Get Pro Access</h3>
+                <p class="text-slate-400 text-sm mb-6">Unlimited audits for South African SMEs</p>
+                <div class="text-3xl font-black mb-6">R99<span class="text-sm font-normal text-slate-500"> / month</span></div>
+                <ul class="text-sm space-y-3 mb-8">
+                    <li>? POPIA & BCEA Risk Scanning</li>
+                    <li>? Browser-Locked Security</li>
+                    <li>? Downloadable Audit Reports</li>
+                </ul>
+                <a href="INSERT_PAYFAST_OR_YOCO_LINK" target="_blank" class="block w-full bg-green-600 text-center text-white font-bold py-3 rounded hover:bg-green-700 transition">Subscribe Now</a>
+            </div>
+        </div>
+
+        <div id="loader" class="hidden mt-8 text-center"><div class="inline-block animate-spin rounded-full h-8 w-8 border-4 border-slate-800 border-t-transparent"></div></div>
+        <div id="result" class="hidden mt-8 bg-white shadow-md rounded-lg p-8 border-t-4 border-slate-800">
+            <div class="flex justify-between items-center mb-4"><h3 class="text-xl font-bold text-slate-800">Audit Findings</h3><button onclick="downloadReport()" class="bg-green-600 text-white px-3 py-1 rounded text-xs">Download Report</button></div>
+            <div id="reportText" class="text-slate-700 whitespace-pre-wrap leading-relaxed pt-4 border-t"></div>
+        </div>
+    </div>
+
+    <script>
+        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.worker.min.js';
+        
+        // YOUR MASTER LIST - Add new codes here when people pay!
+        const validCodes = ["TRIAL-2025", "CHIPS-VIP-01"];
+
+        async function analyzeContract() {
+            const code = document.getElementById('accessCode').value.trim();
+            const key = document.getElementById('apiKey').value.trim();
+            const file = document.getElementById('fileInput').files[0];
+
+            if (!validCodes.includes(code)) return alert("Invalid Access Code. Please subscribe.");
+            if (!key || !file) return alert("Please provide both an API Key and a PDF.");
+
+            // BROWSER BONDING SECURITY
+            if (!localStorage.getItem('my_id')) localStorage.setItem('my_id', 'ID-' + Math.random().toString(36).substr(2, 9));
+            const myId = localStorage.getItem('my_id');
+            const bondedId = localStorage.getItem('bond_' + code);
+
+            if (bondedId && bondedId !== myId) return alert("? This code is already in use on another device.");
+            localStorage.setItem('bond_' + code, myId);
+
+            document.getElementById('loader').classList.remove('hidden');
+            try {
+                const arrayBuffer = await file.arrayBuffer();
+                const pdf = await pdfjsLib.getDocument(arrayBuffer).promise;
+                let text = "";
+                for (let i = 1; i <= pdf.numPages; i++) {
+                    const page = await pdf.getPage(i);
+                    const content = await page.getTextContent();
+                    text += content.items.map(s => s.str).join(" ");
+                }
+
+                const res = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${key}`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ contents: [{ parts: [{ text: `You are a South African legal assistant. Analyze this contract for Red Flags regarding POPIA, BCEA, and unfair payment terms for freelancers. Provide a risk score out of 10. Text: ${text}` }] }] })
+                });
+
+                const data = await res.json();
+                document.getElementById('reportText').innerText = data.candidates[0].content.parts[0].text;
+                document.getElementById('result').classList.remove('hidden');
+            } catch (e) { alert("Error connecting to AI."); }
+            document.getElementById('loader').classList.add('hidden');
+        }
+
+        function downloadReport() {
+            const blob = new Blob([document.getElementById('reportText').innerText], { type: 'text/plain' });
+            const a = document.createElement('a');
+            a.href = URL.createObjectURL(blob);
+            a.download = "Audit_Report.txt";
+            a.click();
+        }
+    </script>
+</body>
+</html>
