--- a/index.html
+++ b/index.html
@@ -1,29 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEBUG MODE - Contract Guard</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-</head>
-<body class="bg-red-50 font-sans">
-    <div class="max-w-xl mx-auto py-20 px-4 text-center">
-        <h1 class="text-2xl font-bold text-red-600 mb-4 italic">🔧 DEBUG MODE: NO PASSWORD REQUIRED</h1>
-        
-        <div class="bg-white p-8 rounded-xl shadow-lg border-2 border-red-200">
-            <input type="file" id="f" accept="application/pdf" class="mb-4 block w-full text-sm">
-            <button onclick="audit()" id="b" class="w-full bg-red-600 text-white font-bold py-4 rounded-lg">TEST AI NOW</button>
-        </div>
-
-        <div id="L" class="hidden mt-4 animate-bounce text-red-600 font-bold">AI IS THINKING...</div>
-        <div id="R" class="hidden mt-8 text-left bg-white p-6 rounded shadow border text-sm whitespace-pre-wrap"></div>
-    </div>
-
-    <script>
-        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.worker.min.js';
-
-        async function audit() {
+async function audit() {
             const file = document.getElementById('f').files[0];
             if(!file) return alert("Select a PDF!");
 
@@ -41,22 +16,34 @@
                 }
 
                 const k = "AIzaSyCfMGe_T6wFyf9MP-gKIjc02uOyE3YAA6Y";
-                const api = `https://corsproxy.io/?${encodeURIComponent("https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + k)}`;
+                // We use gemini-1.5-flash-latest for better stability
+                const api = `https://corsproxy.io/?${encodeURIComponent("https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=" + k)}`;
 
                 const res = await fetch(api, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ contents: [{ parts: [{ text: "Briefly audit this SA contract for risk: " + t }] }] })
+                    body: JSON.stringify({ contents: [{ parts: [{ text: "Audit this SA contract for POPIA/BCEA risks: " + t }] }] })
                 });
 
                 const d = await res.json();
-                document.getElementById('R').innerText = d.candidates[0].content.parts[0].text;
+                
+                // --- NEW SAFETY CHECK ---
+                if (d.error) {
+                    throw new Error("Google API Error: " + d.error.message);
+                }
+
+                if (!d.candidates || d.candidates.length === 0) {
+                    throw new Error("No response from AI. It might be blocked by safety filters.");
+                }
+
+                const output = d.candidates[0].content.parts[0].text;
+                document.getElementById('R').innerText = output;
                 document.getElementById('R').classList.remove('hidden');
+
             } catch (e) {
-                alert("Error: " + e.message);
+                // This will tell us EXACTLY what is wrong
+                alert("DEBUG INFO: " + e.message);
+                console.error(e);
             }
             document.getElementById('L').classList.add('hidden');
         }
-    </script>
-</body>
-</html>
