--- a/index.html
+++ b/index.html
@@ -1,67 +1,106 @@
-async function audit() {
-    const file = document.getElementById('f').files[0];
-    if(!file) return alert("Select a PDF!");
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contract Guard SA - Debug</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+</head>
+<body class="bg-slate-900 text-white font-sans min-h-screen">
 
-    document.getElementById('L').classList.remove('hidden');
-    document.getElementById('R').classList.add('hidden');
+    <div class="max-w-2xl mx-auto py-12 px-6">
+        <div class="bg-slate-800 p-8 rounded-3xl shadow-2xl border border-slate-700">
+            <h1 class="text-3xl font-black text-center mb-2 text-green-400">CONTRACT GUARD SA</h1>
+            <p class="text-center text-slate-400 text-sm mb-8">South African Legal Audit Engine</p>
+            
+            <div class="space-y-6">
+                <div class="bg-slate-900 p-4 rounded-xl border border-slate-700">
+                    <label class="block text-xs font-bold uppercase tracking-widest text-slate-500 mb-2">Upload Contract (PDF)</label>
+                    <input type="file" id="f" accept="application/pdf" class="w-full text-sm text-slate-400 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-green-600 file:text-white hover:file:bg-green-500">
+                </div>
 
-    try {
-        console.log("Starting PDF Parse...");
-        const ab = await file.arrayBuffer();
-        const pdf = await pdfjsLib.getDocument(ab).promise;
-        let t = "";
-        for (let i = 1; i <= pdf.numPages; i++) {
-            const page = await pdf.getPage(i);
-            const content = await page.getTextContent();
-            t += content.items.map(s => s.str).join(" ");
+                <button onclick="audit()" id="b" class="w-full bg-green-600 hover:bg-green-500 text-white font-bold py-4 rounded-xl shadow-lg transition-all active:scale-95">
+                    RUN AI AUDIT
+                </button>
+            </div>
+        </div>
+
+        <div id="L" class="hidden mt-8 text-center">
+            <div class="inline-block animate-spin rounded-full h-8 w-8 border-4 border-green-500 border-t-transparent mb-2"></div>
+            <p class="text-green-500 font-bold animate-pulse">EXTRACTING & ANALYZING...</p>
+        </div>
+
+        <div id="R" class="hidden mt-8 bg-white text-slate-800 p-8 rounded-2xl shadow-2xl overflow-hidden">
+            <h2 class="text-xl font-bold border-b border-slate-200 pb-4 mb-4 text-slate-900">Legal Audit Report</h2>
+            <div id="reportBox" class="text-sm leading-relaxed whitespace-pre-wrap"></div>
+        </div>
+    </div>
+
+    <script>
+        // Load PDF.js worker
+        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.worker.min.js';
+
+        async function audit() {
+            const file = document.getElementById('f').files[0];
+            if(!file) return alert("Please select a PDF file first.");
+
+            const loader = document.getElementById('L');
+            const resultDiv = document.getElementById('R');
+            const reportBox = document.getElementById('reportBox');
+
+            loader.classList.remove('hidden');
+            resultDiv.classList.add('hidden');
+
+            try {
+                // 1. Extract Text
+                const ab = await file.arrayBuffer();
+                const pdf = await pdfjsLib.getDocument(ab).promise;
+                let t = "";
+                for (let i = 1; i <= pdf.numPages; i++) {
+                    const page = await pdf.getPage(i);
+                    const content = await page.getTextContent();
+                    t += content.items.map(s => s.str).join(" ");
+                }
+
+                if (t.length < 10) throw new Error("Could not read text from PDF. Is it a scanned image?");
+
+                // 2. Setup API Call
+                const k = "AIzaSyCfMGe_T6wFyf9MP-gKIjc02uOyE3YAA6Y";
+                const api = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${k}`;
+                const proxy = "https://corsproxy.io/?";
+
+                const res = await fetch(proxy + encodeURIComponent(api), {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        contents: [{ parts: [{ text: "Act as a South African Legal Expert. Audit this contract for POPIA (Privacy) and BCEA (Labour) risks. Flag unfair terms. Text: " + t }] }]
+                    })
+                });
+
+                const d = await res.json();
+
+                // 3. Robust Data Checking (Fixes the '0' error)
+                if (d.error) {
+                    throw new Error(d.error.message);
+                }
+
+                if (d.candidates && d.candidates.length > 0 && d.candidates[0].content) {
+                    const outputText = d.candidates[0].content.parts[0].text;
+                    reportBox.innerText = outputText;
+                    resultDiv.classList.remove('hidden');
+                } else {
+                    console.log("Full Data Object:", d);
+                    throw new Error("AI responded but structure was unexpected. Check Console (F12).");
+                }
+
+            } catch (e) {
+                alert("🚨 ERROR: " + e.message);
+                console.error(e);
+            } finally {
+                loader.classList.add('hidden');
+            }
         }
-        
-        console.log("Text Extracted. Length:", t.length);
-
-        const k = "AIzaSyCfMGe_T6wFyf9MP-gKIjc02uOyE3YAA6Y";
-        // Using the most stable endpoint
-        const api = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${k}`;
-        const proxy = "https://corsproxy.io/?";
-
-        const res = await fetch(proxy + encodeURIComponent(api), {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                contents: [{ parts: [{ text: "Act as a South African Legal Expert. Audit this contract for POPIA and BCEA risks. Be detailed. Text: " + t }] }],
-                // This part tells the AI not to block the response for legal text
-                safetySettings: [
-                    { category: "HARM_CATEGORY_HARASSMENT", threshold: "BLOCK_NONE" },
-                    { category: "HARM_CATEGORY_HATE_SPEECH", threshold: "BLOCK_NONE" },
-                    { category: "HARM_CATEGORY_SEXUALLY_EXPLICIT", threshold: "BLOCK_NONE" },
-                    { category: "HARM_CATEGORY_DANGEROUS_CONTENT", threshold: "BLOCK_NONE" }
-                ]
-            })
-        });
-
-        const d = await res.json();
-
-        if (d.error) {
-            throw new Error(`Google says: ${d.error.message} (Status: ${d.error.status})`);
-        }
-
-        // Check if the AI was blocked by safety despite our settings
-        if (d.candidates && d.candidates[0].finishReason === "SAFETY") {
-            throw new Error("The AI refused to analyze this specific document for safety/privacy reasons.");
-        }
-
-        if (!d.candidates || !d.candidates[0].content) {
-            throw new Error("AI responded but the report was empty. Try a shorter contract.");
-        }
-
-        const output = d.candidates[0].content.parts[0].text;
-        document.getElementById('R').innerText = output;
-        document.getElementById('R').classList.remove('hidden');
-        console.log("Audit Successful!");
-
-    } catch (e) {
-        alert("🚨 AUDIT FAILED\n\nReason: " + e.message);
-        console.error("Full Error:", e);
-    } finally {
-        document.getElementById('L').classList.add('hidden');
-    }
-}
+    </script>
+</body>
+</html>
