--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contract Guard SA - Debug</title>
+    <title>Contract Guard SA - Stable</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
 </head>
@@ -28,32 +28,26 @@
 
         <div id="L" class="hidden mt-8 text-center">
             <div class="inline-block animate-spin rounded-full h-8 w-8 border-4 border-green-500 border-t-transparent mb-2"></div>
-            <p class="text-green-500 font-bold animate-pulse">EXTRACTING & ANALYZING...</p>
+            <p class="text-green-500 font-bold animate-pulse">ANALYZING CONTRACT...</p>
         </div>
 
-        <div id="R" class="hidden mt-8 bg-white text-slate-800 p-8 rounded-2xl shadow-2xl overflow-hidden">
+        <div id="R" class="hidden mt-8 bg-white text-slate-800 p-8 rounded-2xl shadow-2xl">
             <h2 class="text-xl font-bold border-b border-slate-200 pb-4 mb-4 text-slate-900">Legal Audit Report</h2>
             <div id="reportBox" class="text-sm leading-relaxed whitespace-pre-wrap"></div>
         </div>
     </div>
 
     <script>
-        // Load PDF.js worker
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.worker.min.js';
 
         async function audit() {
             const file = document.getElementById('f').files[0];
-            if(!file) return alert("Please select a PDF file first.");
+            if(!file) return alert("Please select a PDF file.");
 
-            const loader = document.getElementById('L');
-            const resultDiv = document.getElementById('R');
-            const reportBox = document.getElementById('reportBox');
-
-            loader.classList.remove('hidden');
-            resultDiv.classList.add('hidden');
+            document.getElementById('L').classList.remove('hidden');
+            document.getElementById('R').classList.add('hidden');
 
             try {
-                // 1. Extract Text
                 const ab = await file.arrayBuffer();
                 const pdf = await pdfjsLib.getDocument(ab).promise;
                 let t = "";
@@ -63,42 +57,36 @@
                     t += content.items.map(s => s.str).join(" ");
                 }
 
-                if (t.length < 10) throw new Error("Could not read text from PDF. Is it a scanned image?");
+                if (t.length < 5) throw new Error("Could not extract text from PDF.");
 
-                // 2. Setup API Call
                 const k = "AIzaSyCfMGe_T6wFyf9MP-gKIjc02uOyE3YAA6Y";
-                const api = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${k}`;
+                // FIX: Updated to 'gemini-1.5-flash-latest'
+                const targetUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${k}`;
                 const proxy = "https://corsproxy.io/?";
 
-                const res = await fetch(proxy + encodeURIComponent(api), {
+                const res = await fetch(proxy + encodeURIComponent(targetUrl), {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
-                        contents: [{ parts: [{ text: "Act as a South African Legal Expert. Audit this contract for POPIA (Privacy) and BCEA (Labour) risks. Flag unfair terms. Text: " + t }] }]
+                        contents: [{ parts: [{ text: "Act as a South African Legal Expert. Audit this contract for POPIA and BCEA risks. Summarize the findings. Text: " + t }] }]
                     })
                 });
 
                 const d = await res.json();
 
-                // 3. Robust Data Checking (Fixes the '0' error)
-                if (d.error) {
-                    throw new Error(d.error.message);
-                }
+                if (d.error) throw new Error(d.error.message);
 
-                if (d.candidates && d.candidates.length > 0 && d.candidates[0].content) {
-                    const outputText = d.candidates[0].content.parts[0].text;
-                    reportBox.innerText = outputText;
-                    resultDiv.classList.remove('hidden');
+                if (d.candidates && d.candidates[0].content) {
+                    document.getElementById('reportBox').innerText = d.candidates[0].content.parts[0].text;
+                    document.getElementById('R').classList.remove('hidden');
                 } else {
-                    console.log("Full Data Object:", d);
-                    throw new Error("AI responded but structure was unexpected. Check Console (F12).");
+                    throw new Error("AI responded but structure was invalid.");
                 }
 
             } catch (e) {
-                alert("🚨 ERROR: " + e.message);
-                console.error(e);
+                alert("🚨 SYSTEM ERROR: " + e.message);
             } finally {
-                loader.classList.add('hidden');
+                document.getElementById('L').classList.add('hidden');
             }
         }
     </script>
