--- a/index.html
+++ b/index.html
@@ -3,57 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contract Guard SA | Legal AI</title>
+    <title>Contract Guard SA | 2.5 Thinking Engine</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
         body { font-family: 'Inter', sans-serif; }
+        .thinking-glow { box-shadow: 0 0 15px rgba(34, 197, 94, 0.4); }
     </style>
 </head>
 <body class="bg-slate-950 text-slate-200 min-h-screen">
 
-    <nav class="border-b border-slate-800 bg-slate-900/50 p-4 sticky top-0 z-50">
+    <nav class="border-b border-slate-800 bg-slate-900/50 p-4 sticky top-0 z-50 backdrop-blur-md">
         <div class="max-w-3xl mx-auto flex justify-between items-center">
-            <span class="font-black text-white tracking-tighter text-xl">CONTRACT GUARD <span class="text-green-500">SA</span></span>
-            <span class="text-[10px] font-bold bg-slate-800 px-3 py-1 rounded-full text-slate-400 uppercase tracking-widest">v1.5 Flash Stable</span>
+            <span class="font-black text-white tracking-tighter text-xl uppercase">Contract Guard <span class="text-green-500">SA</span></span>
+            <span class="text-[10px] font-bold bg-green-500/10 text-green-500 px-3 py-1 rounded-full border border-green-500/20 uppercase tracking-widest">Powered by Gemini 2.5</span>
         </div>
     </nav>
 
     <main class="max-w-2xl mx-auto py-12 px-6">
-        <div class="bg-slate-900 border border-slate-800 p-8 rounded-3xl shadow-2xl">
+        <div class="bg-slate-900 border border-slate-800 p-8 rounded-3xl shadow-2xl thinking-glow">
             <div class="space-y-6">
                 <div>
-                    <label class="block text-xs font-bold uppercase text-slate-500 mb-2 ml-1">Access Code</label>
+                    <label class="block text-xs font-bold uppercase text-slate-500 mb-2 ml-1">Secure Access Code</label>
                     <input type="text" id="accessCode" placeholder="TRIAL-2025" class="w-full bg-slate-950 border border-slate-800 p-4 rounded-xl text-green-400 outline-none focus:border-green-500 transition-all font-mono uppercase">
                 </div>
                 
-                <div class="bg-slate-950 p-6 border-2 border-dashed border-slate-800 rounded-xl text-center relative group">
+                <div class="bg-slate-950 p-8 border-2 border-dashed border-slate-800 rounded-2xl text-center relative group hover:border-green-500/50 transition-colors">
                     <input type="file" id="f" accept="application/pdf" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer">
                     <div class="text-slate-500 group-hover:text-slate-300">
-                        <span class="text-2xl block mb-2">📄</span>
-                        <p class="text-sm font-medium" id="fn">Click to upload Contract PDF</p>
+                        <span class="text-3xl block mb-2">📄</span>
+                        <p class="text-sm font-bold" id="fn">Drag & Drop SA Contract PDF</p>
+                        <p class="text-[10px] mt-1 text-slate-600 uppercase">POPIA / BCEA / CIPC Audit Ready</p>
                     </div>
                 </div>
 
-                <button onclick="audit()" class="w-full bg-green-600 hover:bg-green-500 text-slate-950 font-black py-4 rounded-xl transition-all uppercase tracking-tight text-lg">Run Legal Audit</button>
+                <button onclick="audit()" class="w-full bg-green-600 hover:bg-green-500 text-slate-950 font-black py-4 rounded-xl transition-all uppercase tracking-tight text-lg shadow-lg">Start 2.5 Audit</button>
             </div>
         </div>
 
         <div id="L" class="hidden mt-10 text-center">
             <div class="inline-block animate-spin rounded-full h-10 w-10 border-4 border-green-500 border-t-transparent mb-4"></div>
-            <p class="text-green-500 font-black tracking-widest text-xs animate-pulse">ANALYZING COMPLIANCE...</p>
+            <p class="text-green-500 font-black tracking-widest text-xs animate-pulse">2.5 ENGINE IS THINKING...</p>
         </div>
 
         <div id="R" class="hidden mt-10 bg-white text-slate-900 p-10 rounded-3xl shadow-2xl relative">
-            <div class="absolute top-0 left-0 w-full h-2 bg-green-500"></div>
+            <div class="absolute top-0 left-0 w-full h-2 bg-green-500 rounded-t-3xl"></div>
             <div id="printArea">
-                <h2 class="text-2xl font-black border-b pb-4 mb-6">LEGAL RISK REPORT</h2>
-                <div id="box" class="text-sm leading-relaxed whitespace-pre-wrap font-medium"></div>
+                <div class="flex justify-between items-start mb-6 border-b pb-4">
+                    <h2 class="text-2xl font-black uppercase tracking-tighter">Legal Audit Results</h2>
+                    <span class="text-[10px] font-bold bg-slate-100 px-2 py-1 rounded text-slate-500 uppercase">South Africa 2025</span>
+                </div>
+                <div id="box" class="text-sm leading-relaxed whitespace-pre-wrap font-medium text-slate-800"></div>
             </div>
-            <button onclick="save()" class="mt-8 w-full bg-slate-900 text-white py-4 rounded-xl font-bold flex items-center justify-center gap-2 hover:bg-slate-800 transition-all">
-                <span>📥</span> DOWNLOAD REPORT
+            <button onclick="save()" class="mt-8 w-full bg-slate-900 text-white py-4 rounded-xl font-bold flex items-center justify-center gap-2 hover:bg-black transition-all">
+                📥 DOWNLOAD OFFICIAL REPORT
             </button>
         </div>
     </main>
@@ -74,7 +79,6 @@
             result.classList.add('hidden');
 
             try {
-                // 1. Extract PDF
                 const ab = await file.arrayBuffer();
                 const pdf = await pdfjsLib.getDocument(ab).promise;
                 let t = "";
@@ -84,16 +88,21 @@
                     t += content.items.map(s => s.str).join(" ");
                 }
 
-                // 2. The working API configuration
+                // API Key & Model Lock
                 const k = "AIzaSyDl8odPlnBUilaiYqb2hkZjNSvNbB1mXGU";
-                const api = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${k}`;
+                const api = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key=${k}`;
                 const proxy = "https://corsproxy.io/?";
 
                 const res = await fetch(proxy + encodeURIComponent(api), {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
-                        contents: [{ parts: [{ text: "Act as a South African Legal Expert. Audit this contract for POPIA and BCEA risks. Be detailed with bullet points: " + t }] }],
+                        contents: [{ parts: [{ text: "Act as a South African Compliance Officer. Audit this contract for POPIA (data privacy), BCEA (labour), and CIPC (governance) risks. Use clear bullet points for 'Red Flags': " + t }] }],
+                        generationConfig: {
+                            temperature: 0.2,
+                            topP: 0.8,
+                            topK: 40
+                        },
                         safetySettings: [
                             { category: "HARM_CATEGORY_HARASSMENT", threshold: "BLOCK_NONE" },
                             { category: "HARM_CATEGORY_HATE_SPEECH", threshold: "BLOCK_NONE" },
@@ -105,14 +114,16 @@
 
                 const d = await res.json();
 
+                if (d.error) {
+                    throw new Error(`[Gemini 2.5 Error]: ${d.error.message}`);
+                }
+
                 if (d.candidates && d.candidates[0].content) {
                     document.getElementById('box').innerText = d.candidates[0].content.parts[0].text;
                     result.classList.remove('hidden');
                     result.scrollIntoView({ behavior: 'smooth' });
                 } else {
-                    // This handles the 'Busy' issue by checking why it stopped
-                    const reason = d.candidates ? d.candidates[0].finishReason : "API ERROR";
-                    throw new Error("AI Refused. Reason: " + reason);
+                    throw new Error("Analysis Refused by 2.5 Filters.");
                 }
 
             } catch (err) {
@@ -123,8 +134,9 @@
         }
 
         function save() { 
-            const opt = { margin: 1, filename: 'Audit_Report.pdf', image: { type: 'jpeg', quality: 0.98 }, html2canvas: { scale: 2 }, jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' } };
-            html2pdf().set(opt).from(document.getElementById('printArea')).save(); 
+            const element = document.getElementById('printArea');
+            const opt = { margin: 1, filename: 'Audit_Compliance_Report.pdf', jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' } };
+            html2pdf().set(opt).from(element).save(); 
         }
     </script>
 </body>
